# Broadaxis-frontend-backend

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  ERROR_HANDLING.md  OPTIMIZATION_REPORT.md  PRODUCTION.md  README.md  create_new_index.py  deploy.sh  docker-compose.prod.yml  embedding.py  package-lock.json  package.json  requirements.txt  requirements_langgraph.txt  setup-production.sh  start.bat  start_all.py  start_backend_only.py  test_broadaxis_simple.py  test_broadaxis_tool.py
ba-server/: fix_imports.py  fix_pylance.py  pyproject.toml  server.py  test_search.py
ba-server/generated_files/: document_ecaa5b98.docx
ba-server/papers/retrieval_augmented_generation/: papers_info.json
backend/: api.py  api_backup.py  debug_pinecone.py  document_prioritizer.py  email_api.py  error_handler.py  limiter.py  mcp_interface.py  processed_attachments.json  real_fetched_emails.json  requirements.txt  rfp_review_pipeline.py  run_backend.py  session_manager.py  shared_utils.py  sharepoint_api.py  simple_document_system.py  simple_test.py  test_vectors.py  token_manager.py  websocket_api.py
backend/ba-server/: server.py
backend/email_attachments/2025-01-14/: RFI_Software_Development.docx
backend/email_attachments/2025-06-27/: OSD___Infrastructure_As_A_Service_Solution___Market_Research.docx  RFI QA 6.18.25 v2.1750274411427.docx  TMF Initiative 2 - MMI RFI Document 5.29.1749140814134.docx  (+1 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
nginx/: nginx.conf
(+34 files in other folders)
