[project]
name = "ba-server"
version = "0.1.0"
description = "BroadAxis RFP/RFQ Management Platform with FastAPI Backend and React Frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.7.8",
    "arxiv>=2.1.0",
    "fastapi>=0.104.1",
    "fpdf2>=2.7.6",
    "langchain-huggingface>=0.0.3",
    "markdown>=3.5.1",
    "mcp>=1.0.0",
    "nest-asyncio>=1.5.8",
    "pinecone-client>=3.0.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.7",
    "sentence-transformers>=2.2.2",
    "streamlit>=1.47.0",
    "tavily-python>=0.3.3",
    "tiktoken>=0.5.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "httpx>=0.25.2",
    "pydantic>=2.5.0",
    "jinja2>=3.1.2",
]
